// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c8 /* c8 ignore next */ does not incorrectly mark previous branch as uncovered (see #254) 1`] = `
",--------------|---------|----------|---------|---------|-------------------
File          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------|---------|----------|---------|---------|-------------------
All files     |     100 |      100 |     100 |     100 |                   
 issue-254.js |     100 |      100 |     100 |     100 |                   
--------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 /* c8 ignore next */ ignores lines with special comment 1`] = `
",covered
covered
-------------------|---------|----------|---------|---------|-------------------
File               | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------|---------|----------|---------|---------|-------------------
All files          |    90.9 |      100 |     100 |    90.9 |                   
 c8-ignore-next.js |    90.9 |      100 |     100 |    90.9 | 21-22             
-------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 /* c8 ignore start/stop */ ignores lines with special comment 1`] = `
",covered
covered
-------------------------|---------|----------|---------|---------|-------------------
File                     | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------------|---------|----------|---------|---------|-------------------
All files                |     100 |       75 |     100 |     100 |                   
 c8-ignore-start-stop.js |     100 |       75 |     100 |     100 | 2                 
-------------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 --all reports coverage for unloaded js files as 0 for line, branch and function 1`] = `
",zero
positive
negative
--------------|---------|----------|---------|---------|-------------------
File          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------|---------|----------|---------|---------|-------------------
All files     |   64.28 |    66.66 |      50 |   64.28 |                   
 vanilla      |   78.26 |       75 |     100 |   78.26 |                   
  loaded.js   |   73.68 |    71.42 |     100 |   73.68 | 4-5,16-18         
  main.js     |     100 |      100 |     100 |     100 |                   
 vanilla/dir  |       0 |        0 |       0 |       0 |                   
  unloaded.js |       0 |        0 |       0 |       0 | 1-5               
--------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 --all reports coverage for unloaded transpiled ts files as 0 for line, branch and function 1`] = `
",zero
positive
negative
-----------------|---------|----------|---------|---------|-------------------
File             | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------------|---------|----------|---------|---------|-------------------
All files        |   64.28 |    57.14 |      50 |   64.28 |                   
 ts-compiled     |   78.26 |    66.66 |     100 |   78.26 |                   
  loaded.ts      |   73.68 |    66.66 |     100 |   73.68 | 4-5,16-18         
  main.ts        |     100 |      100 |     100 |     100 |                   
 ts-compiled/dir |       0 |        0 |       0 |       0 |                   
  unloaded.ts    |       0 |        0 |       0 |       0 | 1-5               
-----------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 --all reports coverage for unloaded ts files as 0 for line, branch and function when using ts-node 1`] = `
",zero
positive
negative
--------------|---------|----------|---------|---------|-------------------
File          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------|---------|----------|---------|---------|-------------------
All files     |   64.28 |    57.14 |      50 |   64.28 |                   
 ts-only      |   78.26 |    66.66 |     100 |   78.26 |                   
  loaded.ts   |   73.68 |    66.66 |     100 |   73.68 | 4-5,16-18         
  main.ts     |     100 |      100 |     100 |     100 |                   
 ts-only/dir  |       0 |        0 |       0 |       0 |                   
  unloaded.ts |       0 |        0 |       0 |       0 | 1-5               
--------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 --all should allow for --all to be used in conjunction with --check-coverage 1`] = `
",zero
positive
negative
--------------|---------|----------|---------|---------|-------------------
File          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------|---------|----------|---------|---------|-------------------
All files     |   64.28 |    66.66 |      50 |   64.28 |                   
 vanilla      |   78.26 |       75 |     100 |   78.26 |                   
  loaded.js   |   73.68 |    71.42 |     100 |   73.68 | 4-5,16-18         
  main.js     |     100 |      100 |     100 |     100 |                   
 vanilla/dir  |       0 |        0 |       0 |       0 |                   
  unloaded.js |       0 |        0 |       0 |       0 | 1-5               
--------------|---------|----------|---------|---------|-------------------
,ERROR: Coverage for lines (64.28%) does not meet global threshold (100%)
ERROR: Coverage for branches (66.66%) does not meet global threshold (82%)
ERROR: Coverage for statements (64.28%) does not meet global threshold (95%)
"
`;

exports[`c8 --all should allow for --all to be used with the check-coverage command (2 invocations) 1`] = `
",,ERROR: Coverage for lines (64.28%) does not meet global threshold (90%)
ERROR: Coverage for branches (66.66%) does not meet global threshold (82%)
ERROR: Coverage for statements (64.28%) does not meet global threshold (95%)
"
`;

exports[`c8 --exclude-after-remap applies exclude rules after source-maps are applied 1`] = `
",reachable
a = true
a = false
-------------|---------|----------|---------|---------|-------------------
File         | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------|---------|----------|---------|---------|-------------------
All files    |     100 |      100 |     100 |     100 |                   
 branch-2.js |     100 |      100 |     100 |     100 |                   
-------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 --extension includes coverage when extensions specified 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
--------------------|---------|----------|---------|---------|-------------------
File                | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------------|---------|----------|---------|---------|-------------------
All files           |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js           |     100 |      100 |     100 |     100 |                   
 custom-ext.special |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
--------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 --extension includes coverage when extensions specified with --all 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
---------------------------------------|---------|----------|---------|---------|------------------------
File                                   | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s      
---------------------------------------|---------|----------|---------|---------|------------------------
All files                              |    3.24 |     12.5 |    6.52 |    3.24 |                        
 c8                                    |       0 |        0 |       0 |       0 |                        
  index.js                             |       0 |        0 |       0 |       0 | 1                      
 c8/bin                                |       0 |        0 |       0 |       0 |                        
  c8.js                                |       0 |        0 |       0 |       0 | 1-43                   
 c8/coverage                           |       0 |        0 |       0 |       0 |                        
  block-navigation.js                  |       0 |        0 |       0 |       0 | 1-87                   
  prettify.js                          |       0 |        0 |       0 |       0 | 1-2                    
  sorter.js                            |       0 |        0 |       0 |       0 | 1-196                  
 c8/lib                                |       0 |        0 |       0 |       0 |                        
  parse-args.js                        |       0 |        0 |       0 |       0 | 1-362                  
  report.js                            |       0 |        0 |       0 |       0 | 1-402                  
  source-map-from-file.js              |       0 |        0 |       0 |       0 | 1-100                  
 c8/lib/commands                       |       0 |        0 |       0 |       0 |                        
  check-coverage.js                    |       0 |        0 |       0 |       0 | 1-70                   
  report.js                            |       0 |        0 |       0 |       0 | 1-43                   
 c8/test/fixtures                      |   30.97 |     37.5 |   21.42 |   30.97 |                        
  async.js                             |     100 |      100 |     100 |     100 |                        
  c8-ignore-next.js                    |   54.54 |        0 |       0 |   54.54 | 1,3-4,9,12,17-19,21-22 
  c8-ignore-start-stop.js              |    61.9 |        0 |       0 |    61.9 | 1-4,10,16-18           
  computed-method.js                   |       0 |        0 |       0 |       0 | 1-15                   
  custom-ext.special                   |      75 |    66.66 |   33.33 |      75 | 14-16,18-20            
  custom-ext2.special                  |       0 |        0 |       0 |       0 | 1-24                   
  issue-254.js                         |   28.57 |        0 |       0 |   28.57 | 1-2,5-7                
  multiple-spawn.js                    |       0 |        0 |       0 |       0 | 1-12                   
  normal.js                            |       0 |        0 |       0 |       0 | 1-24                   
  shebang.js                           |       0 |        0 |       0 |       0 | 1-8                    
  subprocess.js                        |       0 |        0 |       0 |       0 | 1-15                   
 c8/test/fixtures/all/ts-compiled      |       0 |        0 |       0 |       0 |                        
  loaded.ts                            |       0 |        0 |       0 |       0 | 1-19                   
  main.ts                              |       0 |        0 |       0 |       0 | 1-4                    
 c8/test/fixtures/all/ts-compiled/dir  |       0 |        0 |       0 |       0 |                        
  unloaded.ts                          |       0 |        0 |       0 |       0 | 1-5                    
 c8/test/fixtures/all/vanilla          |       0 |        0 |       0 |       0 |                        
  loaded.js                            |       0 |        0 |       0 |       0 | 1-19                   
  main.js                              |       0 |        0 |       0 |       0 | 1-4                    
 c8/test/fixtures/all/vanilla/dir      |       0 |        0 |       0 |       0 |                        
  unloaded.js                          |       0 |        0 |       0 |       0 | 1-5                    
 c8/test/fixtures/multidir1            |       0 |        0 |       0 |       0 |                        
  file1.js                             |       0 |        0 |       0 |       0 | 1                      
 c8/test/fixtures/multidir2            |       0 |        0 |       0 |       0 |                        
  file2.js                             |       0 |        0 |       0 |       0 | 1                      
 c8/test/fixtures/report               |       0 |        0 |       0 |       0 |                        
  allowExternal.js                     |       0 |        0 |       0 |       0 | 1                      
  report-multi-dir-external.js         |       0 |        0 |       0 |       0 | 1-12                   
  report-single-dir-external.js        |       0 |        0 |       0 |       0 | 1-12                   
  srcOverride.js                       |       0 |        0 |       0 |       0 | 1                      
 c8/test/fixtures/source-maps          |       0 |        0 |       0 |       0 |                        
  branches.js                          |       0 |        0 |       0 |       0 | 1-20                   
  fake-source-map.js                   |       0 |        0 |       0 |       0 | 1-7                    
 c8/test/fixtures/source-maps/branches |       0 |        0 |       0 |       0 |                        
  branch-1.js                          |       0 |        0 |       0 |       0 | 1-12                   
  branch-2.js                          |       0 |        0 |       0 |       0 | 1-9                    
  branches.js                          |       0 |        0 |       0 |       0 | 1-20                   
  branches.typescript.ts               |       0 |        0 |       0 |       0 | 1-25                   
 c8/test/fixtures/source-maps/classes  |       0 |        0 |       0 |       0 |                        
  class-1.js                           |       0 |        0 |       0 |       0 | 1-5                    
  class-2.js                           |       0 |        0 |       0 |       0 | 1-23                   
  classes.js                           |       0 |        0 |       0 |       0 | 1-27                   
  classes.typescript.ts                |       0 |        0 |       0 |       0 | 1-33                   
---------------------------------------|---------|----------|---------|---------|------------------------
,"
`;

exports[`c8 ESM Modules collects coverage for ESM modules 1`] = `
",bar foo
------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |   83.33 |      100 |   66.66 |   83.33 |                   
 export.cjs |     100 |      100 |     100 |     100 |                   
 export.mjs |   71.42 |      100 |      50 |   71.42 | 2-3               
 import.mjs |     100 |      100 |     100 |     100 |                   
------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 check-coverage --100 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,ERROR: Coverage for lines (83.33%) does not meet global threshold (100%)
ERROR: Coverage for functions (60%) does not meet global threshold (100%)
ERROR: Coverage for branches (85.71%) does not meet global threshold (100%)
ERROR: Coverage for statements (83.33%) does not meet global threshold (100%)
"
`;

exports[`c8 check-coverage allows --check-coverage when executing script 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,ERROR: Coverage for lines (83.33%) does not meet global threshold (101%)
ERROR: Coverage for statements (83.33%) does not meet global threshold (95%)
"
`;

exports[`c8 check-coverage allows threshold to be applied on per-file basis 1`] = `
",,ERROR: Coverage for lines (100%) does not meet threshold (101%) for test/fixtures/async.js
ERROR: Coverage for lines (75%) does not meet threshold (101%) for test/fixtures/normal.js
ERROR: Coverage for branches (66.66%) does not meet threshold (82%) for test/fixtures/normal.js
ERROR: Coverage for statements (75%) does not meet threshold (95%) for test/fixtures/normal.js
"
`;

exports[`c8 check-coverage check-coverage command with --100 1`] = `
",,ERROR: Coverage for lines (83.33%) does not meet global threshold (100%)
ERROR: Coverage for functions (60%) does not meet global threshold (100%)
ERROR: Coverage for branches (85.71%) does not meet global threshold (100%)
ERROR: Coverage for statements (83.33%) does not meet global threshold (100%)
"
`;

exports[`c8 check-coverage exits with 0 if coverage within threshold 1`] = `",,"`;

exports[`c8 check-coverage exits with 1 if coverage is below threshold 1`] = `
",,ERROR: Coverage for lines (83.33%) does not meet global threshold (101%)
ERROR: Coverage for statements (83.33%) does not meet global threshold (95%)
"
`;

exports[`c8 cobertura report escapes special characters 1`] = `
"<?xml version=\\"1.0\\" ?>
<!DOCTYPE coverage SYSTEM \\"http://cobertura.sourceforge.net/xml/coverage-04.dtd\\">
<coverage lines-valid=\\"15\\" lines-covered=\\"15\\" line-rate=\\"1\\" branches-valid=\\"4\\" branches-covered=\\"4\\" branch-rate=\\"1\\" timestamp=\\"nnnn\\" complexity=\\"0\\" version=\\"0.1\\">
  <sources>
    <source>/foo/file</source>
  </sources>
  <packages>
    <package name=\\"main\\" line-rate=\\"1\\" branch-rate=\\"1\\">
      <classes>
        <class name=\\"computed-method.js\\" filename=\\"test/fixtures/computed-method.js\\" line-rate=\\"1\\" branch-rate=\\"1\\">
          <methods>
            <method name=\\"Test\\" hits=\\"1\\" signature=\\"()V\\">
              <lines>
                <line number=\\"2\\" hits=\\"1\\"/>
              </lines>
            </method>
            <method name=\\"run\\" hits=\\"1\\" signature=\\"()V\\">
              <lines>
                <line number=\\"6\\" hits=\\"1\\"/>
              </lines>
            </method>
            <method name=\\"map.&lt;computed&gt;.f\\" hits=\\"1\\" signature=\\"()V\\">
              <lines>
                <line number=\\"8\\" hits=\\"1\\"/>
              </lines>
            </method>
          </methods>
          <lines>
            <line number=\\"1\\" hits=\\"1\\" branch=\\"true\\" condition-coverage=\\"100% (1/1)\\"/>
            <line number=\\"2\\" hits=\\"1\\" branch=\\"true\\" condition-coverage=\\"100% (1/1)\\"/>
            <line number=\\"3\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"4\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"5\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"6\\" hits=\\"1\\" branch=\\"true\\" condition-coverage=\\"100% (1/1)\\"/>
            <line number=\\"7\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"8\\" hits=\\"1\\" branch=\\"true\\" condition-coverage=\\"100% (1/1)\\"/>
            <line number=\\"9\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"10\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"11\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"12\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"13\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"14\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"15\\" hits=\\"1\\" branch=\\"false\\"/>
          </lines>
        </class>
      </classes>
    </package>
  </packages>
</coverage>
"
`;

exports[`c8 collects coverage for script with shebang 1`] = `
",hello world
------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |      75 |       50 |     100 |      75 |                   
 shebang.js |      75 |       50 |     100 |      75 | 7-8               
------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync /* c8 ignore next */ does not incorrectly mark previous branch as uncovered (see #254) 1`] = `
",--------------|---------|----------|---------|---------|-------------------
File          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------|---------|----------|---------|---------|-------------------
All files     |     100 |      100 |     100 |     100 |                   
 issue-254.js |     100 |      100 |     100 |     100 |                   
--------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync /* c8 ignore next */ ignores lines with special comment 1`] = `
",covered
covered
-------------------|---------|----------|---------|---------|-------------------
File               | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------|---------|----------|---------|---------|-------------------
All files          |    90.9 |      100 |     100 |    90.9 |                   
 c8-ignore-next.js |    90.9 |      100 |     100 |    90.9 | 21-22             
-------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync /* c8 ignore start/stop */ ignores lines with special comment 1`] = `
",covered
covered
-------------------------|---------|----------|---------|---------|-------------------
File                     | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------------|---------|----------|---------|---------|-------------------
All files                |     100 |       75 |     100 |     100 |                   
 c8-ignore-start-stop.js |     100 |       75 |     100 |     100 | 2                 
-------------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync --all reports coverage for unloaded js files as 0 for line, branch and function 1`] = `
",zero
positive
negative
--------------|---------|----------|---------|---------|-------------------
File          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------|---------|----------|---------|---------|-------------------
All files     |   64.28 |    66.66 |      50 |   64.28 |                   
 vanilla      |   78.26 |       75 |     100 |   78.26 |                   
  loaded.js   |   73.68 |    71.42 |     100 |   73.68 | 4-5,16-18         
  main.js     |     100 |      100 |     100 |     100 |                   
 vanilla/dir  |       0 |        0 |       0 |       0 |                   
  unloaded.js |       0 |        0 |       0 |       0 | 1-5               
--------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync --all reports coverage for unloaded transpiled ts files as 0 for line, branch and function 1`] = `
",zero
positive
negative
-----------------|---------|----------|---------|---------|-------------------
File             | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------------|---------|----------|---------|---------|-------------------
All files        |   64.28 |    57.14 |      50 |   64.28 |                   
 ts-compiled     |   78.26 |    66.66 |     100 |   78.26 |                   
  loaded.ts      |   73.68 |    66.66 |     100 |   73.68 | 4-5,16-18         
  main.ts        |     100 |      100 |     100 |     100 |                   
 ts-compiled/dir |       0 |        0 |       0 |       0 |                   
  unloaded.ts    |       0 |        0 |       0 |       0 | 1-5               
-----------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync --all reports coverage for unloaded ts files as 0 for line, branch and function when using ts-node 1`] = `
",zero
positive
negative
--------------|---------|----------|---------|---------|-------------------
File          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------|---------|----------|---------|---------|-------------------
All files     |   64.28 |    57.14 |      50 |   64.28 |                   
 ts-only      |   78.26 |    66.66 |     100 |   78.26 |                   
  loaded.ts   |   73.68 |    66.66 |     100 |   73.68 | 4-5,16-18         
  main.ts     |     100 |      100 |     100 |     100 |                   
 ts-only/dir  |       0 |        0 |       0 |       0 |                   
  unloaded.ts |       0 |        0 |       0 |       0 | 1-5               
--------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync --all should allow for --all to be used in conjunction with --check-coverage 1`] = `
",zero
positive
negative
--------------|---------|----------|---------|---------|-------------------
File          | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------|---------|----------|---------|---------|-------------------
All files     |   64.28 |    66.66 |      50 |   64.28 |                   
 vanilla      |   78.26 |       75 |     100 |   78.26 |                   
  loaded.js   |   73.68 |    71.42 |     100 |   73.68 | 4-5,16-18         
  main.js     |     100 |      100 |     100 |     100 |                   
 vanilla/dir  |       0 |        0 |       0 |       0 |                   
  unloaded.js |       0 |        0 |       0 |       0 | 1-5               
--------------|---------|----------|---------|---------|-------------------
,ERROR: Coverage for lines (64.28%) does not meet global threshold (100%)
ERROR: Coverage for branches (66.66%) does not meet global threshold (82%)
ERROR: Coverage for statements (64.28%) does not meet global threshold (95%)
"
`;

exports[`c8 mergeAsync --all should allow for --all to be used with the check-coverage command (2 invocations) 1`] = `
",,ERROR: Coverage for lines (64.28%) does not meet global threshold (90%)
ERROR: Coverage for branches (66.66%) does not meet global threshold (82%)
ERROR: Coverage for statements (64.28%) does not meet global threshold (95%)
"
`;

exports[`c8 mergeAsync --exclude-after-remap applies exclude rules after source-maps are applied 1`] = `
",reachable
a = true
a = false
-------------|---------|----------|---------|---------|-------------------
File         | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------|---------|----------|---------|---------|-------------------
All files    |     100 |      100 |     100 |     100 |                   
 branch-2.js |     100 |      100 |     100 |     100 |                   
-------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync --extension includes coverage when extensions specified 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
--------------------|---------|----------|---------|---------|-------------------
File                | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------------|---------|----------|---------|---------|-------------------
All files           |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js           |     100 |      100 |     100 |     100 |                   
 custom-ext.special |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
--------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync --extension includes coverage when extensions specified with --all 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
---------------------------------------|---------|----------|---------|---------|------------------------
File                                   | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s      
---------------------------------------|---------|----------|---------|---------|------------------------
All files                              |    3.24 |     12.5 |    6.52 |    3.24 |                        
 c8                                    |       0 |        0 |       0 |       0 |                        
  index.js                             |       0 |        0 |       0 |       0 | 1                      
 c8/bin                                |       0 |        0 |       0 |       0 |                        
  c8.js                                |       0 |        0 |       0 |       0 | 1-43                   
 c8/coverage                           |       0 |        0 |       0 |       0 |                        
  block-navigation.js                  |       0 |        0 |       0 |       0 | 1-87                   
  prettify.js                          |       0 |        0 |       0 |       0 | 1-2                    
  sorter.js                            |       0 |        0 |       0 |       0 | 1-196                  
 c8/lib                                |       0 |        0 |       0 |       0 |                        
  parse-args.js                        |       0 |        0 |       0 |       0 | 1-362                  
  report.js                            |       0 |        0 |       0 |       0 | 1-402                  
  source-map-from-file.js              |       0 |        0 |       0 |       0 | 1-100                  
 c8/lib/commands                       |       0 |        0 |       0 |       0 |                        
  check-coverage.js                    |       0 |        0 |       0 |       0 | 1-70                   
  report.js                            |       0 |        0 |       0 |       0 | 1-43                   
 c8/test/fixtures                      |   30.97 |     37.5 |   21.42 |   30.97 |                        
  async.js                             |     100 |      100 |     100 |     100 |                        
  c8-ignore-next.js                    |   54.54 |        0 |       0 |   54.54 | 1,3-4,9,12,17-19,21-22 
  c8-ignore-start-stop.js              |    61.9 |        0 |       0 |    61.9 | 1-4,10,16-18           
  computed-method.js                   |       0 |        0 |       0 |       0 | 1-15                   
  custom-ext.special                   |      75 |    66.66 |   33.33 |      75 | 14-16,18-20            
  custom-ext2.special                  |       0 |        0 |       0 |       0 | 1-24                   
  issue-254.js                         |   28.57 |        0 |       0 |   28.57 | 1-2,5-7                
  multiple-spawn.js                    |       0 |        0 |       0 |       0 | 1-12                   
  normal.js                            |       0 |        0 |       0 |       0 | 1-24                   
  shebang.js                           |       0 |        0 |       0 |       0 | 1-8                    
  subprocess.js                        |       0 |        0 |       0 |       0 | 1-15                   
 c8/test/fixtures/all/ts-compiled      |       0 |        0 |       0 |       0 |                        
  loaded.ts                            |       0 |        0 |       0 |       0 | 1-19                   
  main.ts                              |       0 |        0 |       0 |       0 | 1-4                    
 c8/test/fixtures/all/ts-compiled/dir  |       0 |        0 |       0 |       0 |                        
  unloaded.ts                          |       0 |        0 |       0 |       0 | 1-5                    
 c8/test/fixtures/all/vanilla          |       0 |        0 |       0 |       0 |                        
  loaded.js                            |       0 |        0 |       0 |       0 | 1-19                   
  main.js                              |       0 |        0 |       0 |       0 | 1-4                    
 c8/test/fixtures/all/vanilla/dir      |       0 |        0 |       0 |       0 |                        
  unloaded.js                          |       0 |        0 |       0 |       0 | 1-5                    
 c8/test/fixtures/multidir1            |       0 |        0 |       0 |       0 |                        
  file1.js                             |       0 |        0 |       0 |       0 | 1                      
 c8/test/fixtures/multidir2            |       0 |        0 |       0 |       0 |                        
  file2.js                             |       0 |        0 |       0 |       0 | 1                      
 c8/test/fixtures/report               |       0 |        0 |       0 |       0 |                        
  allowExternal.js                     |       0 |        0 |       0 |       0 | 1                      
  report-multi-dir-external.js         |       0 |        0 |       0 |       0 | 1-12                   
  report-single-dir-external.js        |       0 |        0 |       0 |       0 | 1-12                   
  srcOverride.js                       |       0 |        0 |       0 |       0 | 1                      
 c8/test/fixtures/source-maps          |       0 |        0 |       0 |       0 |                        
  branches.js                          |       0 |        0 |       0 |       0 | 1-20                   
  fake-source-map.js                   |       0 |        0 |       0 |       0 | 1-7                    
 c8/test/fixtures/source-maps/branches |       0 |        0 |       0 |       0 |                        
  branch-1.js                          |       0 |        0 |       0 |       0 | 1-12                   
  branch-2.js                          |       0 |        0 |       0 |       0 | 1-9                    
  branches.js                          |       0 |        0 |       0 |       0 | 1-20                   
  branches.typescript.ts               |       0 |        0 |       0 |       0 | 1-25                   
 c8/test/fixtures/source-maps/classes  |       0 |        0 |       0 |       0 |                        
  class-1.js                           |       0 |        0 |       0 |       0 | 1-5                    
  class-2.js                           |       0 |        0 |       0 |       0 | 1-23                   
  classes.js                           |       0 |        0 |       0 |       0 | 1-27                   
  classes.typescript.ts                |       0 |        0 |       0 |       0 | 1-33                   
---------------------------------------|---------|----------|---------|---------|------------------------
,"
`;

exports[`c8 mergeAsync ESM Modules collects coverage for ESM modules 1`] = `
",bar foo
------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |   83.33 |      100 |   66.66 |   83.33 |                   
 export.cjs |     100 |      100 |     100 |     100 |                   
 export.mjs |   71.42 |      100 |      50 |   71.42 | 2-3               
 import.mjs |     100 |      100 |     100 |     100 |                   
------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync check-coverage --100 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,ERROR: Coverage for lines (83.33%) does not meet global threshold (100%)
ERROR: Coverage for functions (60%) does not meet global threshold (100%)
ERROR: Coverage for branches (85.71%) does not meet global threshold (100%)
ERROR: Coverage for statements (83.33%) does not meet global threshold (100%)
"
`;

exports[`c8 mergeAsync check-coverage allows --check-coverage when executing script 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,ERROR: Coverage for lines (83.33%) does not meet global threshold (101%)
ERROR: Coverage for statements (83.33%) does not meet global threshold (95%)
"
`;

exports[`c8 mergeAsync check-coverage allows threshold to be applied on per-file basis 1`] = `
",,ERROR: Coverage for lines (100%) does not meet threshold (101%) for test/fixtures/async.js
ERROR: Coverage for lines (75%) does not meet threshold (101%) for test/fixtures/normal.js
ERROR: Coverage for branches (66.66%) does not meet threshold (82%) for test/fixtures/normal.js
ERROR: Coverage for statements (75%) does not meet threshold (95%) for test/fixtures/normal.js
"
`;

exports[`c8 mergeAsync check-coverage check-coverage command with --100 1`] = `
",,ERROR: Coverage for lines (83.33%) does not meet global threshold (100%)
ERROR: Coverage for functions (60%) does not meet global threshold (100%)
ERROR: Coverage for branches (85.71%) does not meet global threshold (100%)
ERROR: Coverage for statements (83.33%) does not meet global threshold (100%)
"
`;

exports[`c8 mergeAsync check-coverage exits with 0 if coverage within threshold 1`] = `",,"`;

exports[`c8 mergeAsync check-coverage exits with 1 if coverage is below threshold 1`] = `
",,ERROR: Coverage for lines (83.33%) does not meet global threshold (101%)
ERROR: Coverage for statements (83.33%) does not meet global threshold (95%)
"
`;

exports[`c8 mergeAsync cobertura report escapes special characters 1`] = `
"<?xml version=\\"1.0\\" ?>
<!DOCTYPE coverage SYSTEM \\"http://cobertura.sourceforge.net/xml/coverage-04.dtd\\">
<coverage lines-valid=\\"15\\" lines-covered=\\"15\\" line-rate=\\"1\\" branches-valid=\\"4\\" branches-covered=\\"4\\" branch-rate=\\"1\\" timestamp=\\"nnnn\\" complexity=\\"0\\" version=\\"0.1\\">
  <sources>
    <source>/foo/file</source>
  </sources>
  <packages>
    <package name=\\"main\\" line-rate=\\"1\\" branch-rate=\\"1\\">
      <classes>
        <class name=\\"computed-method.js\\" filename=\\"test/fixtures/computed-method.js\\" line-rate=\\"1\\" branch-rate=\\"1\\">
          <methods>
            <method name=\\"Test\\" hits=\\"1\\" signature=\\"()V\\">
              <lines>
                <line number=\\"2\\" hits=\\"1\\"/>
              </lines>
            </method>
            <method name=\\"run\\" hits=\\"1\\" signature=\\"()V\\">
              <lines>
                <line number=\\"6\\" hits=\\"1\\"/>
              </lines>
            </method>
            <method name=\\"map.&lt;computed&gt;.f\\" hits=\\"1\\" signature=\\"()V\\">
              <lines>
                <line number=\\"8\\" hits=\\"1\\"/>
              </lines>
            </method>
          </methods>
          <lines>
            <line number=\\"1\\" hits=\\"1\\" branch=\\"true\\" condition-coverage=\\"100% (1/1)\\"/>
            <line number=\\"2\\" hits=\\"1\\" branch=\\"true\\" condition-coverage=\\"100% (1/1)\\"/>
            <line number=\\"3\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"4\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"5\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"6\\" hits=\\"1\\" branch=\\"true\\" condition-coverage=\\"100% (1/1)\\"/>
            <line number=\\"7\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"8\\" hits=\\"1\\" branch=\\"true\\" condition-coverage=\\"100% (1/1)\\"/>
            <line number=\\"9\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"10\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"11\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"12\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"13\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"14\\" hits=\\"1\\" branch=\\"false\\"/>
            <line number=\\"15\\" hits=\\"1\\" branch=\\"false\\"/>
          </lines>
        </class>
      </classes>
    </package>
  </packages>
</coverage>
"
`;

exports[`c8 mergeAsync collects coverage for script with shebang 1`] = `
",hello world
------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |      75 |       50 |     100 |      75 |                   
 shebang.js |      75 |       50 |     100 |      75 | 7-8               
------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync merges reports from subprocesses together 1`] = `
",first

second

-------------------|---------|----------|---------|---------|-------------------
File               | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------|---------|----------|---------|---------|-------------------
All files          |     100 |      100 |     100 |     100 |                   
 multiple-spawn.js |     100 |      100 |     100 |     100 |                   
 subprocess.js     |     100 |      100 |     100 |     100 |                   
-------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync report generates report from existing temporary files 1`] = `
",-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync report supports --check-coverage, when generating reports 1`] = `
",-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,ERROR: Coverage for lines (83.33%) does not meet global threshold (101%)
ERROR: Coverage for statements (83.33%) does not meet global threshold (95%)
"
`;

exports[`c8 mergeAsync report supports reporting on directories outside cwd 1`] = `
",-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |       0 |        0 |       0 |       0 |                   
 multidir1 |       0 |        0 |       0 |       0 |                   
  file1.js |       0 |        0 |       0 |       0 | 1                 
 multidir2 |       0 |        0 |       0 |       0 |                   
  file2.js |       0 |        0 |       0 |       0 | 1                 
-----------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync report supports reporting on single directories outside cwd 1`] = `
",----------|---------|----------|---------|---------|-------------------
File      | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------|---------|----------|---------|---------|-------------------
All files |       0 |        0 |       0 |       0 |                   
 file1.js |       0 |        0 |       0 |       0 | 1                 
----------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync reports coverage for script that exits normally 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync should allow for files outside of cwd 1`] = `
",hi
-------------------|---------|----------|---------|---------|-------------------
File               | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------|---------|----------|---------|---------|-------------------
All files          |     100 |      100 |     100 |     100 |                   
 multidir1         |     100 |      100 |     100 |     100 |                   
  file1.js         |     100 |      100 |     100 |     100 |                   
 report            |     100 |      100 |     100 |     100 |                   
  allowExternal.js |     100 |      100 |     100 |     100 |                   
-------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync should allow for multiple overrides of src location for --all 1`] = `
",hihi
--------------------------------|---------|----------|---------|---------|-------------------
File                            | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------------------------|---------|----------|---------|---------|-------------------
All files                       |    3.57 |    16.66 |       0 |    3.57 |                   
 multidir1                      |       0 |        0 |       0 |       0 |                   
  file1.js                      |       0 |        0 |       0 |       0 | 1                 
 multidir2                      |       0 |        0 |       0 |       0 |                   
  file2.js                      |       0 |        0 |       0 |       0 | 1                 
 report                         |    3.84 |       25 |       0 |    3.84 |                   
  allowExternal.js              |       0 |        0 |       0 |       0 | 1                 
  report-multi-dir-external.js  |       0 |        0 |       0 |       0 | 1-12              
  report-single-dir-external.js |       0 |        0 |       0 |       0 | 1-12              
  srcOverride.js                |     100 |      100 |     100 |     100 |                   
--------------------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync source-maps TypeScript remaps branches 1`] = `
",reachable
a = true
a = false
------------------------|---------|----------|---------|---------|-------------------
File                    | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------------------|---------|----------|---------|---------|-------------------
All files               |      84 |       50 |     100 |      84 |                   
 branches.typescript.ts |      84 |       50 |     100 |      84 | 7,11-12,18        
------------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync source-maps TypeScript remaps classes 1`] = `
",covered
covered
covered
covered
covered
-----------------------|---------|----------|---------|---------|-------------------
File                   | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------------------|---------|----------|---------|---------|-------------------
All files              |   81.81 |    85.71 |      60 |   81.81 |                   
 classes.typescript.ts |   81.81 |    85.71 |      60 |   81.81 | 12-13,21-22,27-28 
-----------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync source-maps UglifyJS remaps branches 1`] = `
",reachable
a = true
a = false
-------------|---------|----------|---------|---------|-------------------
File         | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------|---------|----------|---------|---------|-------------------
All files    |      80 |       40 |     100 |      80 |                   
 branches.js |      80 |       40 |     100 |      80 | 2,5-6,13          
-------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync source-maps UglifyJS remaps classes 1`] = `
",covered
covered
covered
covered
covered
------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |   85.18 |       80 |      60 |   85.18 |                   
 classes.js |   85.18 |       80 |      60 |   85.18 | 6-7,15,21         
------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync source-maps does not attempt to load source map URLs that aren't 1`] = `
",--------------------|---------|----------|---------|---------|-------------------
File                | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------------|---------|----------|---------|---------|-------------------
All files           |   71.42 |       50 |     100 |   71.42 |                   
 fake-source-map.js |   71.42 |       50 |     100 |   71.42 | 5-6               
--------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync source-maps nyc remaps branches 1`] = `
",reachable
a = true
a = false
-------------|---------|----------|---------|---------|-------------------
File         | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------|---------|----------|---------|---------|-------------------
All files    |      80 |       40 |     100 |      80 |                   
 branches.js |      80 |       40 |     100 |      80 | 2,6-7,13          
-------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync source-maps nyc remaps classes 1`] = `
",covered
covered
covered
covered
covered
------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |   77.77 |    83.33 |      60 |   77.77 |                   
 classes.js |   77.77 |    83.33 |      60 |   77.77 | 7-8,15-16,21-22   
------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync source-maps rollup remaps branches 1`] = `
",reachable
a = true
a = false
-------------|---------|----------|---------|---------|-------------------
File         | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------|---------|----------|---------|---------|-------------------
All files    |     100 |      100 |     100 |     100 |                   
 branch-1.js |     100 |      100 |     100 |     100 |                   
 branch-2.js |     100 |      100 |     100 |     100 |                   
-------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync source-maps rollup remaps classes 1`] = `
",covered
covered
covered
covered
covered
------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |   78.57 |    83.33 |      60 |   78.57 |                   
 class-1.js |     100 |      100 |     100 |     100 |                   
 class-2.js |   73.91 |    83.33 |      60 |   73.91 | 7-8,15-16,21-22   
------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync source-maps ts-node reads source-map from cache, and applies to coverage 1`] = `
",covered
covered
covered
covered
covered
------------------|---------|----------|---------|---------|-------------------
File              | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------------|---------|----------|---------|---------|-------------------
All files         |   88.23 |    83.33 |      80 |   88.23 |                   
 ts-node-basic.ts |   88.23 |    83.33 |      80 |   88.23 | 12-13,28-29       
------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 mergeAsync supports externally set NODE_V8_COVERAGE 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 merges reports from subprocesses together 1`] = `
",first

second

-------------------|---------|----------|---------|---------|-------------------
File               | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------|---------|----------|---------|---------|-------------------
All files          |     100 |      100 |     100 |     100 |                   
 multiple-spawn.js |     100 |      100 |     100 |     100 |                   
 subprocess.js     |     100 |      100 |     100 |     100 |                   
-------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 report generates report from existing temporary files 1`] = `
",-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 report supports --check-coverage, when generating reports 1`] = `
",-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,ERROR: Coverage for lines (83.33%) does not meet global threshold (101%)
ERROR: Coverage for statements (83.33%) does not meet global threshold (95%)
"
`;

exports[`c8 report supports reporting on directories outside cwd 1`] = `
",-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |       0 |        0 |       0 |       0 |                   
 multidir1 |       0 |        0 |       0 |       0 |                   
  file1.js |       0 |        0 |       0 |       0 | 1                 
 multidir2 |       0 |        0 |       0 |       0 |                   
  file2.js |       0 |        0 |       0 |       0 | 1                 
-----------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 report supports reporting on single directories outside cwd 1`] = `
",----------|---------|----------|---------|---------|-------------------
File      | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------|---------|----------|---------|---------|-------------------
All files |       0 |        0 |       0 |       0 |                   
 file1.js |       0 |        0 |       0 |       0 | 1                 
----------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 reports coverage for script that exits normally 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 should allow for files outside of cwd 1`] = `
",hi
-------------------|---------|----------|---------|---------|-------------------
File               | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------|---------|----------|---------|---------|-------------------
All files          |     100 |      100 |     100 |     100 |                   
 multidir1         |     100 |      100 |     100 |     100 |                   
  file1.js         |     100 |      100 |     100 |     100 |                   
 report            |     100 |      100 |     100 |     100 |                   
  allowExternal.js |     100 |      100 |     100 |     100 |                   
-------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 should allow for multiple overrides of src location for --all 1`] = `
",hihi
--------------------------------|---------|----------|---------|---------|-------------------
File                            | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------------------------|---------|----------|---------|---------|-------------------
All files                       |    3.57 |    16.66 |       0 |    3.57 |                   
 multidir1                      |       0 |        0 |       0 |       0 |                   
  file1.js                      |       0 |        0 |       0 |       0 | 1                 
 multidir2                      |       0 |        0 |       0 |       0 |                   
  file2.js                      |       0 |        0 |       0 |       0 | 1                 
 report                         |    3.84 |       25 |       0 |    3.84 |                   
  allowExternal.js              |       0 |        0 |       0 |       0 | 1                 
  report-multi-dir-external.js  |       0 |        0 |       0 |       0 | 1-12              
  report-single-dir-external.js |       0 |        0 |       0 |       0 | 1-12              
  srcOverride.js                |     100 |      100 |     100 |     100 |                   
--------------------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 source-maps TypeScript remaps branches 1`] = `
",reachable
a = true
a = false
------------------------|---------|----------|---------|---------|-------------------
File                    | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------------------|---------|----------|---------|---------|-------------------
All files               |      84 |       50 |     100 |      84 |                   
 branches.typescript.ts |      84 |       50 |     100 |      84 | 7,11-12,18        
------------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 source-maps TypeScript remaps classes 1`] = `
",covered
covered
covered
covered
covered
-----------------------|---------|----------|---------|---------|-------------------
File                   | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------------------|---------|----------|---------|---------|-------------------
All files              |   81.81 |    85.71 |      60 |   81.81 |                   
 classes.typescript.ts |   81.81 |    85.71 |      60 |   81.81 | 12-13,21-22,27-28 
-----------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 source-maps UglifyJS remaps branches 1`] = `
",reachable
a = true
a = false
-------------|---------|----------|---------|---------|-------------------
File         | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------|---------|----------|---------|---------|-------------------
All files    |      80 |       40 |     100 |      80 |                   
 branches.js |      80 |       40 |     100 |      80 | 2,5-6,13          
-------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 source-maps UglifyJS remaps classes 1`] = `
",covered
covered
covered
covered
covered
------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |   85.18 |       80 |      60 |   85.18 |                   
 classes.js |   85.18 |       80 |      60 |   85.18 | 6-7,15,21         
------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 source-maps does not attempt to load source map URLs that aren't 1`] = `
",--------------------|---------|----------|---------|---------|-------------------
File                | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------------|---------|----------|---------|---------|-------------------
All files           |   71.42 |       50 |     100 |   71.42 |                   
 fake-source-map.js |   71.42 |       50 |     100 |   71.42 | 5-6               
--------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 source-maps nyc remaps branches 1`] = `
",reachable
a = true
a = false
-------------|---------|----------|---------|---------|-------------------
File         | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------|---------|----------|---------|---------|-------------------
All files    |      80 |       40 |     100 |      80 |                   
 branches.js |      80 |       40 |     100 |      80 | 2,6-7,13          
-------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 source-maps nyc remaps classes 1`] = `
",covered
covered
covered
covered
covered
------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |   77.77 |    83.33 |      60 |   77.77 |                   
 classes.js |   77.77 |    83.33 |      60 |   77.77 | 7-8,15-16,21-22   
------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 source-maps rollup remaps branches 1`] = `
",reachable
a = true
a = false
-------------|---------|----------|---------|---------|-------------------
File         | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------|---------|----------|---------|---------|-------------------
All files    |     100 |      100 |     100 |     100 |                   
 branch-1.js |     100 |      100 |     100 |     100 |                   
 branch-2.js |     100 |      100 |     100 |     100 |                   
-------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 source-maps rollup remaps classes 1`] = `
",covered
covered
covered
covered
covered
------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |   78.57 |    83.33 |      60 |   78.57 |                   
 class-1.js |     100 |      100 |     100 |     100 |                   
 class-2.js |   73.91 |    83.33 |      60 |   73.91 | 7-8,15-16,21-22   
------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 source-maps ts-node reads source-map from cache, and applies to coverage 1`] = `
",covered
covered
covered
covered
covered
------------------|---------|----------|---------|---------|-------------------
File              | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------------|---------|----------|---------|---------|-------------------
All files         |   88.23 |    83.33 |      80 |   88.23 |                   
 ts-node-basic.ts |   88.23 |    83.33 |      80 |   88.23 | 12-13,28-29       
------------------|---------|----------|---------|---------|-------------------
,"
`;

exports[`c8 supports externally set NODE_V8_COVERAGE 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   83.33 |    85.71 |      60 |   83.33 |                   
 async.js  |     100 |      100 |     100 |     100 |                   
 normal.js |      75 |    66.66 |   33.33 |      75 | 14-16,18-20       
-----------|---------|----------|---------|---------|-------------------
,"
`;
